--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
+    // "strict": true,
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
