--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "fix": "npm audit fix"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "eslint": "^6.8.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
