--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fix": "npm audit fix"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9.8.8",
     "bootstrap-vue": "^2.21.2",
@@ -21,7 +22,6 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@tailwindcss/custom-forms": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,6 +33,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^8.1.1",
     "prettier": "^2.4.1",
     "typescript": "~4.1.5"
   }
